<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuiz5">

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="136dp"
        android:layout_height="174dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orange" />

    <CheckBox
        android:id="@+id/checkBoxO_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/q10_op2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView34" />

    <CheckBox
        android:id="@+id/checkBoxOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/q10_op1"
        app:layout_constraintStart_toEndOf="@+id/checkBoxO_1"
        app:layout_constraintTop_toBottomOf="@+id/imageView34" />

    <CheckBox
        android:id="@+id/checkBoxO_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="63dp"
        android:text="@string/q10_op3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView34" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="109dp"
        android:layout_height="153dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="151dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxOrange"
        app:srcCompat="@drawable/dog" />

    <CheckBox
        android:id="@+id/checkBoxD1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="192dp"
        android:text="@string/q9_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxO_1" />

    <CheckBox
        android:id="@+id/checkBoxD2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="192dp"
        android:text="@string/q9_op2"
        app:layout_constraintStart_toEndOf="@+id/checkBoxD1"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxOrange" />

    <CheckBox
        android:id="@+id/checkBoxD3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="80dp"
        android:text="@string/q9_op3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxO_2" />

    <Button
        android:id="@+id/button33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:onClick="movePrev"
        android:text="@string/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxD1" />

    <Button
        android:id="@+id/button34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="moveForward"
        android:layout_marginEnd="108dp"
        android:text="@string/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxD2" />
</androidx.constraintlayout.widget.ConstraintLayout>