<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuiz4">

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="170dp"
        android:layout_height="173dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="121dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sparrow" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="185dp"
        android:layout_height="207dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView30"
        app:layout_constraintTop_toBottomOf="@+id/imageView30"
        app:srcCompat="@drawable/monkey" />

    <CheckBox
        android:id="@+id/checkBoxSparrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="240dp"
        android:text="@string/q7_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/q7_op2"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSparrow"
        app:layout_constraintTop_toBottomOf="@+id/imageView30" />

    <CheckBox
        android:id="@+id/checkBoxS3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="239dp"
        android:text="@string/q7_op3"
        app:layout_constraintStart_toEndOf="@+id/checkBoxS2"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="208dp"
        android:text="@string/q8_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSparrow" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="56dp"
        android:text="@string/q8_op2"
        app:layout_constraintEnd_toStartOf="@+id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxS2" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="56dp"
        android:text="@string/q8_op3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxS3" />

    <Button
        android:id="@+id/button31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:onClick="movePrev"
        android:text="@string/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <Button
        android:id="@+id/button32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:onClick="moveForward"
        android:text="@string/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
</androidx.constraintlayout.widget.ConstraintLayout>