<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuiz3">

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="178dp"
        android:layout_height="189dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="117dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hen" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="187dp"
        android:layout_height="179dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView32"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView32"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:srcCompat="@drawable/glasses" />

    <CheckBox
        android:id="@+id/checkBoxH_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="220dp"
        android:text="@string/q5_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxHen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="15dp"
        android:text="@string/q5_op2"
        app:layout_constraintStart_toEndOf="@+id/checkBoxH_1"
        app:layout_constraintTop_toBottomOf="@+id/imageView32" />

    <CheckBox
        android:id="@+id/checkBoxH_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="15dp"
        android:text="@string/q5_op3"
        app:layout_constraintStart_toEndOf="@+id/checkBoxHen"
        app:layout_constraintTop_toBottomOf="@+id/imageView32" />

    <CheckBox
        android:id="@+id/checkBoxG_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="212dp"
        android:text="@string/q6_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxH_1" />

    <CheckBox
        android:id="@+id/checkBox_Glass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="28dp"
        android:text="@string/q6_op2"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxG_2"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHen" />

    <CheckBox
        android:id="@+id/checkBoxG_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="48dp"
        android:text="@string/q6_op3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxH_3" />

    <Button
        android:id="@+id/button29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:onClick="movePrev"
        android:layout_marginTop="21dp"
        android:text="@string/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxG_1" />

    <Button
        android:id="@+id/button30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="93dp"
        android:onClick="moveForward"
        android:text="@string/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_Glass" />
</androidx.constraintlayout.widget.ConstraintLayout>