<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity2">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="153dp"
        android:layout_height="158dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <CheckBox
        android:id="@+id/checkBoxH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/q3_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <CheckBox
        android:id="@+id/checkBoxHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="57dp"
        android:text="@string/q3_op2"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxH3"
        app:layout_constraintStart_toEndOf="@+id/checkBoxH1"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <CheckBox
        android:id="@+id/checkBoxH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/q3_op3"
        app:layout_constraintStart_toEndOf="@+id/checkBoxHome"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <CheckBox
        android:id="@+id/checkBoxO1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="216dp"
        android:text="@string/q4_op1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxH1" />

    <CheckBox
        android:id="@+id/checkBoxO2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="48dp"
        android:text="@string/q4_op2"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_Owl"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHome" />

    <CheckBox
        android:id="@+id/checkBox_Owl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="72dp"
        android:text="@string/q4_op3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxH3" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="148dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView25"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHome"
        app:srcCompat="@drawable/owl" />

    <Button
        android:id="@+id/button27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="97dp"
        android:text="@string/btn"
        android:onClick="moveForward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxO2" />

    <Button
        android:id="@+id/button28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="44dp"
        android:text="@string/btn2"
        android:onClick="movePrev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxO1" />
</androidx.constraintlayout.widget.ConstraintLayout>